--- a/mini_project/.project
+++ b/mini_project/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>mini_project</name>
+	<name>mini_project0209</name>
 	<comment></comment>
 	<projects>
 	</projects>
